# agushell-myshell

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  TODO_README.md  batchfile_example
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
.github/workflows/: QAWorkflow.yml
include/: advanced.h  common.h  external.h  functions.h  internal.h
lib/: advanced.c  common.c  external.c  functions.c  internal.c
script/: build.sh  launcher.sh
src/: main.c
tests/: CMakeLists.txt
tests/unit/: tests.c
